# eBidz

./: .gitattributes  .gitignore  Anchor.toml  Arcium.toml  CONTRIBUTING.md  README.md  SETUP.md  build.ps1  build_idl.ps1  idea.md  list_anchor.ps1  list_interface.ps1  list_macros.ps1  read_anchor_lib.ps1  read_callback.ps1  read_gen_callback.ps1  read_init_comp_def.ps1  read_json.ps1  read_queue.ps1  read_traits.ps1  read_types.ps1  read_utils.ps1  read_validation.ps1  read_validation2.ps1  skill.md  test_idl_build.ps1  tree.ps1  tree2.ps1  tree3.ps1
app/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/scripts/: find-close-target.mjs  migrate-auction-meta-to-upstash.mjs  repro-close-auction.mjs
app/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
app/src/components/: Logo.tsx
arcium/circuits/: first_price_winner.rs
artifacts/: circuits_hash.txt
docs/: ARCHITECTURE.md  ONCHAIN_API.md  OPERATIONS.md
encrypted-ixs/: Cargo.toml  uniform_price_winner.rs  vickrey_winner.rs
encrypted-ixs/src/: first_price_winner.rs  first_price_winner_v12.rs  first_price_winner_v13.rs  main.rs  uniform_price_winner.rs  vickrey_winner.rs
programs/ebidz/: Cargo.toml
programs/ebidz/src/: errors.rs  lib.rs  state.rs
programs/ebidz/src/instructions/: mod.rs
release/live-two/: SHA256SUMS.txt
scripts/: check-cluster.mjs  deploy.ps1  init-comp-def-live-two.sh  init-comp-def.mjs  init-mxe.mjs  init-sign-pda.mjs  requeue-mxe-keygen.mjs
tests/: ebidz.test.ts  package-lock.json  package.json  tsconfig.json
(+47 files in other folders)
