[package]
name = "ebidz"
version = "0.1.0"
description = "eBidz — Blind Auction Protocol on Solana × Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ebidz"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
arcium-anchor = "0.9.6"
arcium-client = { version = "0.9.7", default-features = false }
