[package]
name = "ebidz"
version = "0.1.0"
description = "eBidz — Blind Auction Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ebidz"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
bytemuck = { version = "1.25", features = ["derive"] }
arcium-anchor = "0.9.7"
arcium-macros = "0.9.7"
arcium-client = { version = "0.9.7", default-features = false }
